--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "preline": "^2.0.3",
         "prettier": "^3.2.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-use-websocket": "^4.7.0",
+        "swr": "^2.2.5"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
